# Eminence-HealthOS

./: .bandit.yml  .dockerignore  .env.example  .gitignore  ChatGPT-Initial-Conversation.docx  Dockerfile  Eminence_HealthOS_Executive_Pitch.pptx  Eminence_HealthOS_Upgraded_Architecture_Document.docx  HealthOS_Technical_Architecture_v2.docx  IMPORT_PLAN.md  Makefile  README.md  UNIFIED_PLATFORM_PLAN.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
a2a-gateway/: package.json
a2a-gateway/src/: index.ts
alembic/: env.py
alembic/versions/: 002_add_user_columns.py  003_complete_clinical_models.py  005_operations_models.py
clinical_decision_support/: __init__.py
clinical_decision_support/clinician-dashboard/: .env.example.dev  Dockerfile  index.html  nginx.conf  package-lock.json  package.json
clinical_decision_support/iot-simulator/: Dockerfile  app.py  vitals_generator.py
clinical_decision_support/orchestrator/: Dockerfile  __init__.py  app.py  requirements.txt
database/neo4j/: 01_constraints.cypher  02_indexes.cypher  03_seed_knowledge_graph.cypher  04_seed_hospitals.cypher
database/postgres/: 00_extensions.sql  01_tenant_schema.sql  02_fhir_schema.sql  03_clinical_schema.sql  04_analytics_schema.sql  05_audit_schema.sql  06_rls_policies.sql  07_indexes.sql  08_seed.sql  init.sql
deploy/docker/: Dockerfile.api  Dockerfile.dashboard
deploy/scripts/: deploy.sh  teardown.sh
docs/: AGENT_IMPLEMENTATION.md  AI_ARCHITECTURE.drawio  API_ENDPOINTS.md  ARCHITECTURE_GUIDE.md  DATA_FLOW_DIAGRAM.md  DEPLOYMENT.md  Eminence_HealthOS_Marketing_Deck.pptx  Eminence_HealthOS_One_Pager.pptx  Eminence_HealthOS_Pitch_Deck.pptx  Eminence_HealthOS_Platform_Overview.pptx  MARKETING_ONE_PAGER.md  MODULE_DEVELOPMENT.md  README.md  SECURITY_PENTEST_REPORT.md  USER_GUIDE.md  ZERO_TRUST_ARCHITECTURE.md  generate_one_pager_pdf.py  generate_pptx.py
frontend/: .env.local.example  next.config.ts  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts
frontend/e2e/: auth.spec.ts  dark-mode.spec.ts  dashboard.spec.ts  navigation.spec.ts  search.spec.ts
healthos_platform/: database.py  models.py
healthos_platform/agents/: __init__.py  audit.py  base.py  billing_agent.py  context_assembly.py  hitl.py  master_orchestrator.py  memory.py  ml_ensemble_agent.py  policy_rules.py  quality.py  telemetry.py  types.py
healthos_platform/api/: main.py  schemas.py
healthos_platform/config/: __init__.py  database.py  settings.py
healthos_platform/interop/: __init__.py  ehr_integration.py
healthos_platform/orchestrator/: engine.py  registry.py  router.py  supervisor.py
healthos_platform/security/: auth.py  encryption.py  headers.py  hipaa_validator.py  input_sanitizer.py  rate_limiter.py  rbac.py  tenant_isolation.py
healthos_platform/services/: __init__.py  cache.py  ehr.py  kafka.py  knowledge_graph.py  temporal.py  temporal_worker.py  vector_store.py  workers.py
infrastructure/docker/: Dockerfile
infrastructure/keycloak/: healthos-realm.json
infrastructure/prometheus/: alert_rules.yml  prometheus.yml
mcp-server/: package.json
migrations/: env.py
migrations/versions/: 001_initial_schema.py  004_telehealth_models.py  006_workflow_models.py  007_analytics_models.py  008_inhealth_usa_phase1_to_6.py  009_patient_questionnaires.py
modules/ambient_ai/: events.py  routes.py
modules/analytics/: audit.py  events.py  routes.py  scheduler.py
modules/compliance/: events.py  routes.py
modules/digital_twin/: events.py  routes.py
modules/imaging/: events.py  routes.py
modules/labs/: events.py  routes.py
modules/marketplace/: events.py  routes.py
modules/mental_health/: events.py  routes.py
modules/ms_risk_screening/: __init__.py  routes.py
modules/operations/: events.py  payer_connector.py  routes.py  workflow_engine.py
modules/patient_engagement/: events.py  routes.py
modules/pharmacy/: events.py  routes.py
modules/rcm/: events.py  (+1 more)
ms_risk_screening/: docker-compose.yml
observability/: __init__.py
platform/: config.py  database.py  models.py
scripts/: create_superuser.py  init_db.sql  iot_simulator.py  load_guidelines.py  seed_data.py  seed_recommendations.py  seed_vectors.py  simulate_devices.py
tests/: conftest.py
tools/: README.md  __init__.py  base_tools.py  device_simulator.py  fhir_tools.py  geospatial_tools.py  graph_tools.py  ingest_clinical_data.py  nl2sql_tool.py  notification_tools.py  vector_tools.py  voice_tool.py
(+650 files in other folders)
