[project]
name = "eminence-healthos"
version = "0.1.0"
description = "The AI Operating System for Digital Healthcare Platforms"
requires-python = ">=3.12"
license = {text = "Proprietary - Eminence Tech Solutions"}
authors = [{name = "Eminence Tech Solutions"}]

dependencies = [
    # Core API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "redis>=5.2.0",
    # Agent framework
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-community>=0.3.0",
    # ML / AI
    "anthropic>=0.40.0",
    "scikit-learn>=1.6.0",
    "xgboost>=2.1.0",
    "numpy>=2.0.0",
    "pandas>=2.2.0",
    # Healthcare
    "fhir.resources>=7.1.0",
    # Messaging & Events
    "aiokafka>=0.12.0",
    "celery[redis]>=5.4.0",
    # Security
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0.0,<4.1.0",
    "pyotp>=2.9.0",
    "cryptography>=44.0.0",
    # Observability
    "opentelemetry-api>=1.28.0",
    "opentelemetry-sdk>=1.28.0",
    "prometheus-client>=0.21.0",
    "structlog>=24.4.0",
    # Graph Database
    "neo4j>=5.25.0",
    # Vector Database
    "qdrant-client>=1.12.0",
    # Utilities
    "httpx>=0.28.0",
    "python-multipart>=0.0.18",
    "python-dotenv>=1.0.1",
    "tenacity>=9.0.0",
    "orjson>=3.10.0",
]

[project.optional-dependencies]
ml = [
    "torch",
    "sentence-transformers>=3.3.0",
]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "aiosqlite>=0.20.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["healthos_platform", "modules", "shared", "clinical_decision_support", "observability", "scripts", "services"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "S", "B", "A", "C4", "SIM"]
ignore = ["S101", "S104"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
disallow_untyped_defs = true
